tweaks to the existing api + added UserPlant
